ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karsajobs-ingress
  labels:
    name: karsajobs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/(.*)"
        backend:
          service:
            name: karsajobs-ui-service
            port: 
              number: 8000
      - pathType: Prefix
        path: "/api/(.*)"
        backend:
          service:
            name: karsajobs-service
            port: 
              number: 8080
